# Chiplet_Heterogeneous_newVersion

./: .gitmodules  README.md
.changed_files/gpgpu-sim/libcuda/: cuda_runtime_api.cc
.changed_files/snipersim/sift/recorder/: syscall_modeling.cc
benchmark/DDR/: ddr.cpp  ddr.cu  ddr.yml  makefile  memtest.py
benchmark/MLP/: makefile
benchmark/matmul/: matmul.yml
benchmark/optimize/: ga.py  rs.py
benchmark/optimize/backup/: optimization_log.csv
interchiplet/: CMakeLists.txt
interchiplet/includes/: apis_c.h  apis_cu.h  cmd_handler.h  global_define.h  memorysim.h  pipe_comm.h  sync_protocol.h
interchiplet/patch/: gem5.diff  gpgpu-sim.diff  snipersim.diff
interchiplet/srcs/: apis_c.cpp  cmd_handler.cpp  ddr_mem.cpp  interchiplet.cpp
